# Curso-de-Fast_Api

./: .coverage  database.db  pyproject.toml
fast_api_curso/: app.py  database.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 1bf08599570d_update_table_user_include_updated_at_.py  4c2b35450f0a_create_users_table.py  627e8804dec0_refatoração_update_at.py  6f0075868628_refatoração_update_at.py  81f475521a2f_removendo_update_at.py  90b47df1277b_incluindo_novamente_update_at.py  a5e880432524_update_table_user_include_updated_at.py
tests/: conftest.py  test_app.py  test_db.py
